Demo for Angular Meetup (fix for animation, focus bugs included for later)

--- a/src/lib/stepper/_stepper-theme.scss
+++ b/src/lib/stepper/_stepper-theme.scss
@@ -9,6 +9,12 @@
 
   .mat-horizontal-stepper-header, .mat-vertical-stepper-header {
 
+
+    &:focus,
+    &:hover {
+      background: mat-color($background, hover);
+    }
+
     .mat-stepper-label {
       color: mat-color($foreground, text);
     }
