--- a/src/lib/stepper/stepper.scss
+++ b/src/lib/stepper/stepper.scss
@@ -1,9 +1,11 @@
+@import '../core/style/variables';
+
 $mat-horizontal-stepper-header-height: 72px !default;
 $mat-label-header-height: 24px !default;
 $mat-stepper-label-min-width: 50px !default;
 $mat-stepper-side-gap: 24px !default;
 $mat-vertical-stepper-content-margin: 12px !default;
-$mat-vertical-stepper-content-padding: 16px 0 32px $mat-stepper-side-gap !default;
+$mat-vertical-content-padding-bottom: 32px !default;
 $mat-vertical-content-container-padding: 8px !default;
 $mat-connector-line-width: 1px !default;
 $mat-connector-line-gap: 8px !default;
@@ -43,6 +45,7 @@ $mat-vertical-stepper-margin-top: $mat-stepper-side-gap - $mat-connector-line-ga
   line-height: $mat-horizontal-stepper-header-height;
   overflow: hidden;
   align-items: center;
+  outline: none;
 
   .mat-stepper-index {
     margin-right: $mat-connector-line-gap;
@@ -55,13 +58,14 @@ $mat-vertical-stepper-margin-top: $mat-stepper-side-gap - $mat-connector-line-ga
   display: flex;
   align-items: center;
   margin: $mat-connector-line-gap 0;
+  outline: none;
 
   .mat-stepper-index {
     margin-right: $mat-vertical-stepper-content-margin;
   }
 }
 
-.connector-line {
+.mat-connector-line {
   border-top-width: $mat-connector-line-width;
   border-top-style: solid;
   width: $mat-horizontal-connector-line-size;
@@ -70,11 +74,19 @@ $mat-vertical-stepper-margin-top: $mat-stepper-side-gap - $mat-connector-line-ga
   height: 0;
 }
 
-.mat-horizontal-stepper-content[aria-expanded='false'] {
-    display: none;
+.mat-horizontal-stepper-content {
+  overflow: hidden;
+
+  &[aria-expanded='false'] {
+    height: 0;
+  }
 }
 
-.vertical-content-container {
+.mat-horizontal-content-container {
+  overflow: hidden;
+}
+
+.mat-vertical-content-container {
   border-left-width: $mat-connector-line-width;
   border-left-style: solid;
   margin-left: $mat-vertical-stepper-content-margin;
@@ -83,21 +95,18 @@ $mat-vertical-stepper-margin-top: $mat-stepper-side-gap - $mat-connector-line-ga
 
 .mat-vertical-stepper-content {
   padding-left: $mat-stepper-side-gap;
+  overflow: hidden;
+}
 
-  &[aria-expanded='false'] {
-    display: none;
-  }
-
-  &[aria-expanded='true'] {
-    padding: $mat-vertical-stepper-content-padding;
-  }
+.mat-vertical-content {
+  padding-bottom: $mat-vertical-content-padding-bottom;
 }
 
 .mat-step {
   margin-top: $mat-connector-line-gap;
 
   &:last-child {
-    .vertical-content-container {
+    .mat-vertical-content-container {
       border: none;
     }
   }
