--- a/src/lib/stepper/stepper.scss
+++ b/src/lib/stepper/stepper.scss
@@ -2,7 +2,6 @@
 
 $mat-horizontal-stepper-header-height: 72px !default;
 $mat-stepper-label-header-height: 24px !default;
-$mat-stepper-label-min-width: 50px !default;
 $mat-stepper-side-gap: 24px !default;
 $mat-vertical-stepper-content-margin: 36px !default;
 $mat-stepper-line-width: 1px !default;
@@ -12,53 +11,15 @@ $mat-stepper-line-gap: 8px !default;
   display: block;
 }
 
-.mat-stepper-label {
-  display: inline-flex;
-  white-space: nowrap;
+.mat-step-header {
   overflow: hidden;
-  // TODO(jwshin): text-overflow does not work as expected.
-  text-overflow: ellipsis;
-  min-width: $mat-stepper-label-min-width;
-}
-
-.mat-stepper-index {
-  border-radius: 50%;
-  height: $mat-stepper-label-header-height;
-  width: $mat-stepper-label-header-height;
-  text-align: center;
-  line-height: $mat-stepper-label-header-height;
+  outline: none;
 }
 
 .mat-horizontal-stepper-header-container {
   white-space: nowrap;
   display: flex;
   align-items: center;
-}
-
-.mat-horizontal-stepper-header {
-  display: inline-flex;
-  line-height: $mat-horizontal-stepper-header-height;
-  overflow: hidden;
-  align-items: center;
-  outline: none;
-  padding: 0 $mat-stepper-side-gap;
-
-  .mat-stepper-index {
-    margin-right: $mat-stepper-line-gap;
-    display: inline-block;
-    flex: none;
-  }
-}
-
-.mat-vertical-stepper-header {
-  display: flex;
-  align-items: center;
-  padding: $mat-stepper-side-gap;
-  outline: none;
-
-  .mat-stepper-index {
-    margin-right: $mat-vertical-stepper-content-margin - $mat-stepper-side-gap;
-  }
 }
 
 .mat-stepper-horizontal-line {
@@ -68,6 +29,32 @@ $mat-stepper-line-gap: 8px !default;
   height: 0;
   margin: 0 $mat-stepper-line-gap - $mat-stepper-side-gap;
   min-width: $mat-stepper-line-gap + $mat-stepper-side-gap;
+}
+
+.mat-horizontal-stepper-header {
+  display: flex;
+  height: $mat-horizontal-stepper-header-height;
+  overflow: hidden;
+  align-items: center;
+  padding: 0 $mat-stepper-side-gap;
+
+  .mat-step-icon,
+  .mat-step-icon-not-touched {
+    margin-right: $mat-stepper-line-gap;
+    flex: none;
+  }
+}
+
+.mat-vertical-stepper-header {
+  display: flex;
+  align-items: center;
+  padding: $mat-stepper-side-gap;
+  max-height: $mat-stepper-label-header-height;
+
+  .mat-step-icon,
+  .mat-step-icon-not-touched {
+    margin-right: $mat-vertical-stepper-content-margin - $mat-stepper-side-gap;
+  }
 }
 
 .mat-horizontal-stepper-content {
