--- a/src/lib/stepper/stepper.scss
+++ b/src/lib/stepper/stepper.scss
@@ -7,7 +7,8 @@ $mat-vertical-stepper-content-margin: 36px !default;
 $mat-stepper-line-width: 1px !default;
 $mat-stepper-line-gap: 8px !default;
 
-:host {
+.mat-stepper-vertical,
+.mat-stepper-horizontal {
   display: block;
 }
 
