Code cleanup + rtl support

--- a/src/lib/stepper/_stepper-theme.scss
+++ b/src/lib/stepper/_stepper-theme.scss
@@ -13,11 +13,12 @@
       background-color: mat-color($background, hover);
     }
 
-    .mat-step-label-active {
+    .mat-step-label.mat-step-label-active {
       color: mat-color($foreground, text);
     }
 
-    .mat-step-label-inactive,
+
+    .mat-step-label,
     .mat-step-optional {
       color: mat-color($foreground, disabled-text);
     }
